--- a/gemutils/Makefile
+++ b/gemutils/Makefile
@@ -24,8 +24,8 @@ Sources+=db/GEMDatabaseUtils.cc
 DynamicLibrary=gemutils
 
 IncludeDirs+=$(BUILD_HOME)/$(Project)/$(Package)/include
-IncludeDirs+=$(BUILD_HOME)/$(Project)/gemhardware/include
-DependentLibraryDirs+=$(BUILD_HOME)/$(Project)/gemhardware/lib/$(XDAQ_OS)/$(XDAQ_PLATFORM)
+ # IncludeDirs+=$(BUILD_HOME)/$(Project)/gemhardware/include
+ # DependentLibraryDirs+=$(BUILD_HOME)/$(Project)/gemhardware/lib/$(XDAQ_OS)/$(XDAQ_PLATFORM)
 
 # MySQL Config
 MySQLCFLAGS = $(shell mysql_config --cflags)
@@ -37,9 +37,9 @@ UserCCFlags +=$(MySQLCFLAGS)
 
 LibraryDirs+=$(MySQLLIBS)
 LibraryDirs+=$(MySQLGLIBS)
-LibraryDirs+=$(BUILD_HOME)/$(Project)/gemhardware/lib/$(XDAQ_OS)/$(XDAQ_PLATFORM)
+#LibraryDirs+=$(BUILD_HOME)/$(Project)/gemhardware/lib/$(XDAQ_OS)/$(XDAQ_PLATFORM)
 
-DependentLibraries+=gemhardware
+#DependentLibraries+=gemhardware
 
 UserDynamicLinkFlags+=$(MySQLLIBS)
 
