--- a/gemutils/Makefile
+++ b/gemutils/Makefile
@@ -20,6 +20,7 @@ Sources+=Lock.cc gemXMLparser.cc GEMRegisterUtils.cc
 Sources+=soap/GEMSOAPToolBox.cc
 Sources+=db/GEMDatabaseUtils.cc
 Sources+=db/GEMDBAccess.cc
+Sources+=db/TStoreRequest.cc
 #Sources+=db/GEMDBtoVFATobj.cc
 
 DynamicLibrary=gemutils
